# separatista

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  Separatista.sln
Release/: installer.nsi
doc/: Doxyfile
gui/: CMakeLists.txt  app.cpp  app.h  currencytextctrl.cpp  currencytextctrl.h  documenteditor.cpp  documenteditor.h  expertdataviewmodel.cpp  expertdataviewmodel.h  expertdataviewrenderer.cpp  expertdataviewrenderer.h  ibantextctrl.cpp  ibantextctrl.h  mainframe.cpp  mainframe.h  simpledataviewmodel.cpp  simpledataviewmodel.h  simpledataviewrenderer.cpp  simpledataviewrenderer.h  simpleviewdata.cpp  simpleviewdata.h  variabledialog.cpp  variabledialog.h
gui/maps/: urn_iso_std_iso_20022_tech_xsd_pain.008.001.02.txt
lib/: CMakeLists.txt
lib/separatista/: CMakeLists.txt  accountidentificationchoice.cpp  accountidentificationchoice.h  amendmentinformationdetails.h  attributedleafelement.cpp  attributedleafelement.h  automagic.cpp  automagic.h  branchandfinancialinstitutionidentification.cpp  branchandfinancialinstitutionidentification.h  branchdata.cpp  branchdata.h  branchelement.cpp  branchelement.h  cashaccount.cpp  cashaccount.h  choiceelement.cpp  choiceelement.h  codeorproprietary.cpp  codeorproprietary.h  contactdetails.cpp  contactdetails.h  customerdirectdebitinitiation.cpp  customerdirectdebitinitiation.h  dateandplaceofbirth.cpp  dateandplaceofbirth.h  directdebitdocument.cpp  directdebitdocument.h  directdebittransaction.cpp  directdebittransaction.h  directdebittransactioninformation.cpp  directdebittransactioninformation.h  dll.cpp  documentiterator.cpp  documentiterator.h  documentreader.cpp  documentreader.h  documentregistry.cpp  documentregistry.h  element.cpp  (+55 more)
lib/separatista/camt/: CMakeLists.txt  accountstatement.cpp  accountstatement.h  banktocustomerstatement.cpp  banktocustomerstatement.h  camt.053.001.02.cpp  camt.053.001.02.h  camt_groupheader.cpp  camt_groupheader.h  cashbalance.cpp  cashbalance.h  totaltransactions.cpp  totaltransactions.h
lib/separatista/debug/: debug.cpp  debug.h  dll.cpp
lib/separatista/iban/: CMakeLists.txt  iban.cpp  iban.h
lib/separatista/pain/: CMakeLists.txt  customerdirectdebitinitiation.cpp  customerdirectdebitinitiation.h  directdebittransaction.cpp  directdebittransaction.h  directdebittransactioninformation.cpp  directdebittransactioninformation.h  groupheader.cpp  groupheader.h  mandaterelatedinformation.cpp  mandaterelatedinformation.h  pain.001.001.03.cpp  pain.001.001.03.h  pain.008.001.02.cpp  pain.008.001.02.h  pain_groupheader.cpp  pain_groupheader.h  paymentinformation.cpp  paymentinformation.h  paymentinstruction.cpp  paymentinstruction.h  paymenttypeinformation.cpp  paymenttypeinformation.h
schema/: pain.008.001.02.xsd
stylesheet/: cpp.xsl  (+1 more)
(+72 files in other folders)
